--- a/static/css/base.css
+++ b/static/css/base.css
@@ -44,6 +44,13 @@ body {
 
 /* -------------------------------- Media Queries */
 
+/* Slightly larger container on xl screens */
+@media (min-width: 1200px) {
+  .container {
+    max-width: 80%;
+  }
+}
+
 /* fixed top navbar only on medium and up */
 @media (min-width: 992px) {
     .fixed-top-desktop-only {
