--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,8 +10,21 @@ body {
     font-family: 'Lato';
 }
 
+/* from Bulma */
+.icon {
+    align-items: center;
+    display: inline-flex;
+    justify-content: center;
+    height: 1.5rem;
+    width: 1.5rem;
+}
+
 .logo-font {
     text-transform: uppercase;
+}
+
+.main-logo-link {
+    width: fit-content;
 }
 
 .shop-now-button {
@@ -19,6 +32,7 @@ body {
     color: white;
     min-width: 260px;
 }
+
 .btn-black {
     background: black;
     color: white;
@@ -40,6 +54,10 @@ body {
 
 .border-black {
     border: 1px solid black !important;
+}
+
+.bg-black {
+    background: #000 !important;
 }
 
 /* -------------------------------- Media Queries */
