--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -114,4 +114,46 @@
             </div>
         </div>
 	</div>
+    <div class="btt-button shadow-sm rounded-0 border border-black">
+        <a class="btt-link d-flex h-100">
+            <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+        </a>	
+    </div>
+{% endblock %}
+
+{% block postloadjs %}
+	{{ block.super }}
+	<script type="text/javascript">
+		$('.btt-link').click(function(e) {
+			window.scrollTo(0,0)
+		})
+	</script>
+
+	<!-- Sort Selector -->
+	<script type="text/javascript">
+		$('#sort-selector').change(function() {
+			// Get selector and current URL
+			var selector = $(this);
+			var currentUrl = new URL(window.location);
+
+			// Get selected value (e.g. price_asc, rating_desc, etc)
+			var selectedVal = selector.val();
+			if(selectedVal != "reset"){
+				var sort = selectedVal.split("_")[0];
+				var direction = selectedVal.split("_")[1];
+
+				// Replace GET params
+				currentUrl.searchParams.set("sort", sort);
+				currentUrl.searchParams.set("direction", direction);
+
+				// Replace URL and reload
+				window.location.replace(currentUrl);
+			} else {
+				// If user selects "Sort by...", reset sorting
+				currentUrl.searchParams.delete("sort");
+				currentUrl.searchParams.delete("direction");
+				window.location.replace(currentUrl);
+			}
+		})
+	</script>
 {% endblock %}
