--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -28,7 +28,7 @@
 		</div>
 		<div class="row">
             <div class="col-12 col-lg-7">
-                <div class="order-confirmation-wrapper bg-white p-2 border">
+                <div class="order-confirmation-wrapper p-2 border">
 					<div class="row">
 						<div class="col">
 							<small class="text-muted">Order Info:</small>
@@ -49,8 +49,10 @@
 						<div class="col-12 col-md-8 text-md-right">
 							<p class="mb-0">{{ order.date }}</p>
 						</div>
-						<div class="col"><hr></div>
 					</div>
+                    <div class="row">
+                        <div class="col"><hr></div>
+                    </div>
 
 					<div class="row">
 						<div class="col">
@@ -65,9 +67,11 @@
 							<div class="col-12 col-md-4 text-md-right">
 								<p class="small mb-0">{{ item.quantity }} @ ${{ item.product.price }} each</p>
 							</div>
-							<div class="col"><hr></div>
 						</div>
 					{% endfor %}
+                    <div class="row">
+                        <div class="col"><hr></div>
+                    </div>
 
 					<div class="row">
 						<div class="col">
@@ -150,8 +154,10 @@
 						<div class="col-12 col-md-8 text-md-right">
 							<p class="mb-0">{{ order.phone_number }}</p>
 						</div>
-						<div class="col"><hr></div>
 					</div>
+                    <div class="row">
+                        <div class="col"><hr></div>
+                    </div>
 
 					<div class="row">
 						<div class="col">
@@ -199,11 +205,4 @@
 			</div>
 		</div>
 	</div>
-{% endblock %}
-
-{% block postloadjs %}
-    {{ block.super }}
-    {{ stripe_public_key|json_script:"id_stripe_public_key" }}
-    {{ client_secret|json_script:"id_client_secret" }}
-    <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
 {% endblock %}
