--- a/templates/allauth/account/email.html
+++ b/templates/allauth/account/email.html
@@ -51,7 +51,7 @@
 
     <form method="post" action="{% url 'account_email' %}" class="add_email">
         {% csrf_token %}
-        {{ form.crispy }}
+        {{ form|crispy }}
         <button name="action_add" type="submit">{% trans "Add E-mail" %}</button>
     </form>
 
