--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -41,9 +41,9 @@
 									<tr>
 										<td class="p-3 w-25">
                                             {% if item.product.image %}
-                                                <img class="img-fluid rounded" src="{{ item.product.image.url }}" alt="{{ product.name }}">
+                                                <img class="img-fluid rounded" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
                                             {% else %}
-                                                <img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                                                <img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}">
                                             {% endif %}
 										</td>
 										<td class="py-3">
