--- a/static/css/base.css
+++ b/static/css/base.css
@@ -235,7 +235,7 @@ input[name='q']::placeholder {
     overflow: hidden;
 }
 
-.btn-file input[type=file] {
+.btn-file input[type="file"] {
     position: absolute;
     top: 0;
     right: 0;
